tests/parser/while-statement-test-expression-error.stderr
error: expected expression
 --> $DIR/while-statement-test-expression-error.lox:1:7
  |
1 | while / {}
  |       ^
